230_ingress_apim/kubernetes/6-ingress-internal.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapi-internal
  namespace: webapi
spec:
  ingressClassName: nginx-internal
  rules:
  - http:
      paths:
      - backend:
          service:
            name: webapi
            port:
              number: 80
        path: /
        pathType: Prefix
